# pixly

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.md  ISSUES.md  PROMPTS.txt  README.md  docker-compose.yml  overlay.py  pyproject.toml  run.py  setup.bat  test_system.py  test_system_BMW.py
.github/workflows/: pr-tests.yml
backend/: backend.py  chatbot.py  game_detection.py  knowledge_manager.py  screenshot.py  vector_service.py
games_info/: Black_Myth_Wukong.csv  minecraft.csv
routers/: chat.py  game_detection.py  screenshot.py  settings.py
schemas/: chat.py  game_detection.py  knowledge_search.py  settings.py
services/: chatbot.py  game_detection.py  knowledge_manager.py  vector_service.py
tests/: conftest.py
tests/unit/: test_backend.py  test_chatbot.py  test_game_detection.py  test_knowledge_manager.py  test_screenshot.py  test_vector_service.py
vector_db/: chroma.sqlite3
